--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,24 +14,24 @@ body {
     // color: red;
 }
 
-.ui.grain {
-    background-color: $grain;
-}
+// .ui.grain {
+//     background-color: $grain;
+// }
 
-.ui.blackboard {
-    background-color: $blackboard;
-    color: #fff;
-}
+// .ui.blackboard {
+//     background-color: $blackboard;
+//     color: #fff;
+// }
 
-.ui.oxblood {
-    background-color: $oxblood;
-    color: #fff;
-}
+// .ui.oxblood {
+//     background-color: $oxblood;
+//     color: #fff;
+// }
 
-.ui.tan {
-    background-color: $tan;
-    color: #fff;
-}
+// .ui.tan {
+//     background-color: $tan;
+//     color: #fff;
+// }
 
 /********************
     Segment styles
@@ -47,4 +47,6 @@ body {
 *******************************/
 @import '../components/Button/Button.scss';
 @import '../components/CustomBreadcrumb/CustomBreadcrumb.scss';
-
+@import '../components/CustomInput/CustomInput.scss';
+@import '../components/SearchBar/SearchBar.scss';
+// @import '../../semantic/dist/semantic.min.css';
