Rearrange pages, put back colours

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,24 +14,24 @@ body {
     // color: red;
 }
 
-// .ui.grain {
-//     background-color: $grain;
-// }
+.ui.grain {
+    background-color: $grain;
+}
 
-// .ui.blackboard {
-//     background-color: $blackboard;
-//     color: #fff;
-// }
+.ui.blackboard {
+    background-color: $blackboard;
+    color: #fff;
+}
 
-// .ui.oxblood {
-//     background-color: $oxblood;
-//     color: #fff;
-// }
+.ui.oxblood {
+    background-color: $oxblood;
+    color: #fff;
+}
 
-// .ui.tan {
-//     background-color: $tan;
-//     color: #fff;
-// }
+.ui.tan {
+    background-color: $tan;
+    color: #fff;
+}
 
 /********************
     Segment styles
