Add accordion component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,4 +49,5 @@ body {
 @import '../components/CustomBreadcrumb/CustomBreadcrumb.scss';
 @import '../components/CustomInput/CustomInput.scss';
 @import '../components/SearchBar/SearchBar.scss';
+@import '../components/Accordion/Accordion.scss';
 // @import '../../semantic/dist/semantic.min.css';
