--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -20,7 +20,7 @@ $resultFontSize: 1em;
 $resultPadding: 8px 16px;
 $resultTextColor: black;
 $resultLineHeight: 16px;
-$resultDivider: 1px solid $tan;
+$resultDivider: 1px solid $secondaryBlue;
 $resultLastDivider: 1px solid black;
 
 // image
@@ -39,7 +39,7 @@ $resultTitleFontSize: 16px;
 $resultTitleColor: black;
 
 $resultPriceFloat: right;
-$resultPriceColor: $oxblood;
+$resultPriceColor: $secondaryBlue;
 
 /* Special Message */
 $messageVerticalPadding: 1em;
