--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,6 +43,13 @@ h2 {
   line-height: 52px;
 }
 
+h3 {
+  font-family: 'Merriweather';
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+}
+
 /********************
     Segment styles
 *********************/
