Update button component, variables and add mixins

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,22 @@
 $primaryBlue: #005ea2;
 $secondaryBlue: #346c9d;
 $linkBlue: #346c9d;
+
+//FONTS
+$open-sans: "Open Sans";
+$merriweather: "Merriweather";
+
+//COLORS
+$primary-color: #005ea2;
+$text-color: #343838;
+$title-blue: #0e395c;
+$subtitle-grey: #646b6b;
+$secondary-blue: #f2f8ff;
+$hover-grey: #f2f2f2;
+
+//MEDIA QUERIES
+$small-width: 768px;
+$medium-width: 1024px;
+$max-width: 944px;
+
+$padding-width: 16px;
