--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,20 +1,59 @@
-.ui.button {
+@import 'variables';
+@import 'mixins';
+
+.button {
   border-radius: 4px;
-  padding: 6px 8px;
-  text-align: center;
+  padding: 8px 24px;
+  margin: 8px;
   font-size: 16px;
+  font-weight: 600;
   line-height: 24px;
-  min-width: 304px;
   cursor: pointer;
+}
 
-  &.primary {
-    background-color: $primaryBlue;
-    color: #fff;
+.primary {
+  background: $primary-color;
+  border: 2px solid $primary-color;
+  color: white;
+
+  > span {
+    color: white;
   }
 
-  &.secondary {
-    background-color: transparent;
-    border: 1px solid $secondaryBlue;
-    color: $secondaryBlue;
+}
+
+.ghost {
+  border: 2px solid $primary-color;
+  background: none;
+  color: $primary-color;
+
+  > span {
+    color: $primary-color;
   }
+  
+}
+
+.fill {
+  max-width: 100%;
+  width: 100%;
+}
+
+.fit, .responsive-fit {
+  max-width: fit-content;
+  width: auto;
+}
+
+.responsive-fit {
+  @include small {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+
+.secondary-text {
+  display: block; 
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: normal;
+  text-align: center;
 }
