--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -72,9 +72,10 @@ h3 {
 /******************************
     Import components styles
 *******************************/
+@import '../../semantic/dist/semantic.min.css';
+
 @import '../components/Button/Button.scss';
 @import '../components/CustomBreadcrumb/CustomBreadcrumb.scss';
 @import '../components/CustomInput/CustomInput.scss';
 @import '../components/SearchBar/SearchBar.scss';
 @import '../components/Accordion/Accordion.scss';
-// @import '../../semantic/dist/semantic.min.css';
