Update grid page

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables";
 
-.ui.grid {
+.page--grid .ui.grid {
   max-width: 720px;
   margin-left: auto;
   margin-right: auto;
