Update font used for body

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,8 +14,7 @@
 **********************/
 body {
   font-size: 14px;
-  // color: red;
-  font-family: 'OpenSans, Arial, Helvetica, sans-serif';
+  font-family: 'OpenSans';
 }
 
 .primary {
