--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@ $primaryBlue: #005ea2;
 $secondaryBlue: #346c9d;
 $linkBlue: #346c9d;
 
-//FONTS
+///FONTS
 $open-sans: "Open Sans";
 $merriweather: "Merriweather";
 
@@ -15,8 +15,9 @@ $secondary-blue: #f2f8ff;
 $hover-grey: #f2f2f2;
 
 //MEDIA QUERIES
-$small-width: 768px;
+$small-width: 767px;
 $medium-width: 1024px;
 $max-width: 944px;
 
 $padding-width: 16px;
+$max-homepage-content-width: (4/6 * 100%);
