--- a/src/components/InternalMenu/InternalMenu.scss
+++ b/src/components/InternalMenu/InternalMenu.scss
@@ -1,66 +1,114 @@
+@import 'src/styles/variables';
+@import 'src/styles/mixins';
 
-.ui.dropdown {
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  outline: none;
-  text-align: left;
-  width: 100%;
-  padding: 16px;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
+$arrow-height: 6px;
 
-  .menu {
-    cursor: auto;
-    position: absolute;
-    display: none;
-    outline: none;
-    top: 100%;
-    left: 0;
-    min-width: max-content;
-    width: 100%;
-    transition: opacity .1s ease;
+.internal-menu {
+  // styles for the ul inside menu
+  &--links,
+  &--extra {
+    padding: 0 16px;
     margin: 0;
-    padding: 16px;
-    background: #fff;
-    text-align: left;
-    will-change: transform, opacity;
-    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3), -1px 2px 2px rgba(0, 0, 0, 0.3);
+    list-style: none;
 
-    > .item {
-      position: relative;
+    li {
       cursor: pointer;
-      display: block;
-      left: 0;
-      width: 100%;
-      padding: 8px 8px 8px 14px;
+      position: relative;
+      padding-left: 22px;
 
-      text-align: left;
-      line-height: 24px;
-      font-size: 18px;
-      color: #005ea2;
-      background-color: #fff;
+      p {
+        color: $primary-color;
+        margin: 0 0 16px;
+        font-size: 16px;
+        line-height: 24px;
 
+        &::before {
+          position: absolute;
+          width: 0;
+          height: 0;
+          content: '';
+          top: $arrow-height;
+          left: 8px;
+          border-top: $arrow-height solid transparent;
+          border-bottom: $arrow-height solid transparent;
+          border-left: $arrow-height solid $primary-color;
 
-      &::before {
-        position: absolute;
-        width:0;
-        height:0;
-        content: '';
-        top: 14px;
-        left: 0;  
-        border-top: 6px solid transparent;
-        border-bottom: 6px solid transparent;
-        border-left: 6px solid #005ea2;
-      }
-      
-      &:hover {
-        background-color: #f2f2f2;
+          @include medium {
+            top: 4px;
+            border-top: 4px solid transparent;
+            border-bottom: 4px solid transparent;
+            border-left: 4px solid $primary-color;
+          }
+        }
+
+        &.internal-menu--active--link {
+          color: $text-color;
+          font-weight: 600;
+          cursor: default;
+
+          &::before {
+            position: absolute;
+            width: 0;
+            height: 0;
+            content: '';
+            top: $arrow-height;
+            left: 8px;
+            border-top: $arrow-height solid transparent;
+            border-bottom: $arrow-height solid transparent;
+            border-left: $arrow-height solid $text-color;
+  
+            @include medium {
+              top: 4px;
+              border-top: 4px solid transparent;
+              border-bottom: 4px solid transparent;
+              border-left: 4px solid $text-color;
+            }
+          }
+        }
       }
     }
 
-    > .item:first-child {
-      border-top-width: 0px;
-    } 
-  
+    @include medium {
+      li p {
+        font-size: 12px;
+        line-height: 18px;
+        font-weight: 400;        
+      }
+    }
+
+    @include large {
+      li p {
+        font-size: 12px;
+        line-height: 18px;
+        font-weight: 400;        
+      }
+    }
+  }
+
+  // desktop menu styles
+  &--list {
+    display: inline-block;
+
+    @include small {
+      display: none;
+    }
+  }
+
+  &--extra--title {
+    padding: 16px 0 16px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    color: $text-color;
+
+    @include medium {
+      padding-top: 0;
+      font-size: 12px;
+    }
+  }
+
+  &--accordion {
+    @include medium {
+      display: none;
+    }
   }
 }
