--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+@import 'src/styles/variables';
+@import 'src/styles/mixins';
 
 $header-grey: #979797;
 $header-white: #f2f2f2;
