Add variables for scss

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,9 @@ $title-blue: #0e395c;
 $subtitle-grey: #646b6b;
 $secondary-blue: #f2f8ff;
 $hover-grey: #f2f2f2;
+$border-color: #979797;
+$error-color: #b51d09;
+$placeholder-color: #9b9b9b;
 
 //MEDIA QUERIES
 $small-width: 767px;
