--- a/src/components/Link/Link.scss
+++ b/src/components/Link/Link.scss
@@ -1,5 +1,5 @@
 
-@import "src/styles/variables";
+@import 'src/styles/variables';
 
 .link {
   
@@ -21,8 +21,7 @@
   }
 
   &--name {
-    display: block;
-    margin-top: 5px;
+    display: inline;
     text-decoration: underline;
     color: $primary-color;
     font-weight: 600;
