--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -3,13 +3,13 @@
 
 $arrow-height: 6px;
 
+
 .ui.accordion {
 
   .title {
     border-top: 1px solid $hover-grey;
     cursor: pointer;
     height: 100%;
-    position: relative;
     
     &--with-icon {
       display: flex;
@@ -53,7 +53,16 @@ $arrow-height: 6px;
 
     &.active {
       margin-bottom: 0;
-      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04);
+      border-bottom: 1px solid $hover-grey;
+      // box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04);
+
+      .title--text {
+        color: $primary-highlight-color;
+      }
+
+      .title--with-icon > span {
+        color: $primary-highlight-color;
+      }
 
       >p {
         &::before {
@@ -68,7 +77,17 @@ $arrow-height: 6px;
       }
     }
 
-    &:nth-last-child(2) {
+    &:focus {
+      outline: $focus-color auto 2px;
+    }
+
+    &:hover {
+      @include large {
+        background-color: $hover-grey;
+      }
+    }
+
+    &:nth-last-child(2):not(.single) {
       border-bottom: 1px solid $hover-grey;
     }
   }
