Add css variables, fix width for segments to allow for width auto

--- a/src/components/Segment/Segment.scss
+++ b/src/components/Segment/Segment.scss
@@ -23,7 +23,7 @@
   }
 
   @include large {
-    > * {
+    > *:not(.fit) {
       max-width: none;
       width: $max-width;
       margin-left: auto;
