--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,9 @@ $merriweather: "Merriweather";
 
 //COLORS
 $primary-color: #005ea2;
+$primary-highlight-color: #317cbe;
+$focus-color: #fbc036;
+$hover-color: #f2f2f2;
 $text-color: #343838;
 $title-blue: #0e395c;
 $subtitle-grey: #646b6b;
