--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -7,17 +7,18 @@
     position: absolute;
     top: 14px;
     left: 16px;
+    margin-bottom: 0;
   }
 }
 
 $item-margin-bottom: 24px;
 .ui.sidebar {
-  display: none;
+  visibility: hidden;
   background-color: #fff;
-  padding: 8px 56px;
+  padding: 12px 56px 8px;
 
   &.visible {
-    display: block;
+    visibility: visible;
   }
 
   .link--text {
@@ -52,7 +53,7 @@ $item-margin-bottom: 24px;
 
   &.animating,
   &.visible {
-    transition: transform 5s ease-in-out;
+    transition: transform 0.35s ease;
   }
 
   &.visible.left{
