Add stepper component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,6 +19,7 @@ $hover-grey: #f2f2f2;
 $border-color: #979797;
 $error-color: #b51d09;
 $placeholder-color: #9b9b9b;
+$steps-grey: #d8d8d8;
 
 //MEDIA QUERIES
 $small-width: 767px;
