--- a/src/components/Stepper/Stepper.scss
+++ b/src/components/Stepper/Stepper.scss
@@ -1,18 +1,25 @@
 @import 'src/styles/variables';
 
 .stepper {
-  .step--progress--wrapper {
-    display: flex;
-  }
+  .step {
+    &--number {
+      font-size: 20px;
+      line-height: 28px;
+    }
 
-  .step--progress {
-    flex: 0 0 25%;
-    background-color: $steps-grey;
-    height: 6px;
-    margin-right: 8px;
+    &--progress--wrapper {
+      display: flex;
+    }
 
-    &.active {
-      background-color: $primary-color;
+    &--progress {
+      flex: 0 0 25%;
+      background-color: $steps-grey;
+      height: 6px;
+      margin-right: 8px;
+  
+      &.active {
+        background-color: $primary-color;
+      }
     }
   }
 }
